Use shortened message strings variants for operations progress indications in the new sidebar
With the upcoming 46 release, instead of being only stuffed into a pie, operation summaries will be shown at the bottom of the sidebar. However, those strings currently get truncated 100% of the time, because they are the same detailed strings as the ones found in the detailed progress popover widget:
We would need to use "short abstract" variants of those strings here, specific to the sidebar, to avoid situations such as "into …", given the sidebar's width constraints.
This would at least reduces the likelyhood of nonsensical incomplete sentences in that particular context (as to %s
, into %s
, etc. will always be incomplete there).
So it could become something like:
Compressing %d items…
Moving %d items…
Copying %d items…
I'm not entirely sure if hardcoding the ellipsis (…
) symbol into the string could be "too much" and risk triggering ellipsization of the ellipsis in some languages, but it could help indicate that there is "more info" to be seen when clicking those progress indicators…