progress-info: Introduce short-status

The progress-info status is now being displayed in the sidebar.
Messages like "Copying 100 files in my_directory" are almost always
too long, so we'll use messages more like "Copying 100 files".
For convenience, if a short-status is NULL, use the regular status.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/3289