src/nautilus-file-operations.c
@@ -1299,7 +1299,8 @@ report_delete_progress (CommonJob    *job,
 
         basename = get_basename (G_FILE (delete_job->files->data));
         nautilus_progress_info_take_status (job->progress,
-                                            g_strdup_printf (status, basename));
+                                            g_strdup_printf (status, basename),
+                                            NULL);
     }
     else
     {
@@ -1337,7 +1338,8 @@ report_delete_progress (CommonJob    *job,
         }
         nautilus_progress_info_take_status (job->progress,
                                             g_strdup_printf (status,
-                                                             source_info->num_files));
+                                                             source_info->num_files),
+                                            NULL);
     }
 
     elapsed = g_timer_elapsed (job->time, NULL);
@@ -1712,7 +1714,8 @@ report_trash_progress (CommonJob    *job,
 
         basename = get_basename (G_FILE (delete_job->files->data));
         nautilus_progress_info_take_status (job->progress,
-                                            g_strdup_printf (status, basename));
+                                            g_strdup_printf (status, basename),
+                                            NULL);
     }
     else
     {
@@ -1730,7 +1733,8 @@ report_trash_progress (CommonJob    *job,
         }
         nautilus_progress_info_take_status (job->progress,
                                             g_strdup_printf (status,
-                                                             source_info->num_files));
+                                                             source_info->num_files),
+                                            NULL);
     }
 
 
@@ -3456,9 +3460,11 @@ report_copy_progress (CopyMoveJob  *copy_job,
     guint64 now;
     CommonJob *job;
     gboolean is_move;
+    gchar *short_status;
     gchar *status;
     char *details;
     gchar *tmp;
+    gchar *tmp_short;
 
     job = (CommonJob *) copy_job;
 
@@ -3501,10 +3507,12 @@ report_copy_progress (CopyMoveJob  *copy_job,
                 {
                     if (files_left > 0)
                     {
+                        short_status = _("Moving “%s”");
                         status = _("Moving “%s” to “%s”");
                     }
                     else
                     {
+                        short_status = _("Moved “%s”");
                         status = _("Moved “%s” to “%s”");
                     }
                 }
@@ -3512,10 +3520,12 @@ report_copy_progress (CopyMoveJob  *copy_job,
                 {
                     if (files_left > 0)
                     {
+                        short_status = _("Copying “%s”");
                         status = _("Copying “%s” to “%s”");
                     }
                     else
                     {
+                        short_status = _("Copied “%s”");
                         status = _("Copied “%s” to “%s”");
                     }
                 }
@@ -3530,6 +3540,8 @@ report_copy_progress (CopyMoveJob  *copy_job,
                     tmp = g_strdup_printf (status,
                                            basename_fake_display_source,
                                            basename_dest);
+                    tmp_short = g_strdup_printf (short_status,
+                                                 basename_fake_display_source);
                 }
                 else
                 {
@@ -3539,10 +3551,11 @@ report_copy_progress (CopyMoveJob  *copy_job,
                     tmp = g_strdup_printf (status,
                                            basename_data,
                                            basename_dest);
+                    tmp_short = g_strdup_printf (short_status, basename_data);
                 }
 
                 nautilus_progress_info_take_status (job->progress,
-                                                    tmp);
+                                                    tmp, tmp_short);
             }
             else
             {
@@ -3559,8 +3572,8 @@ report_copy_progress (CopyMoveJob  *copy_job,
 
                 basename = get_basename (G_FILE (copy_job->files->data));
                 nautilus_progress_info_take_status (job->progress,
-                                                    g_strdup_printf (status,
-                                                                     basename));
+                                                    g_strdup_printf (status, basename),
+                                                    NULL);
             }
         }
         else if (copy_job->files != NULL)
@@ -3573,12 +3586,18 @@ report_copy_progress (CopyMoveJob  *copy_job,
 
                     if (is_move)
                     {
+                        short_status = ngettext ("Moving %'d file",
+                                                 "Moving %'d files",
+                                                 source_info->num_files);
                         status = ngettext ("Moving %'d file to “%s”",
                                            "Moving %'d files to “%s”",
                                            source_info->num_files);
                     }
                     else
                     {
+                        short_status = ngettext ("Copying %'d file",
+                                                 "Copying %'d files",
+                                                 source_info->num_files);
                         status = ngettext ("Copying %'d file to “%s”",
                                            "Copying %'d files to “%s”",
                                            source_info->num_files);
@@ -3588,9 +3607,11 @@ report_copy_progress (CopyMoveJob  *copy_job,
                     tmp = g_strdup_printf (status,
                                            source_info->num_files,
                                            basename);
+                    tmp_short = g_strdup_printf (short_status,
+                                                 source_info->num_files);
 
                     nautilus_progress_info_take_status (job->progress,
-                                                        tmp);
+                                                        tmp, tmp_short);
                 }
                 else
                 {
@@ -3598,12 +3619,18 @@ report_copy_progress (CopyMoveJob  *copy_job,
 
                     if (is_move)
                     {
+                        short_status = ngettext ("Moved %'d file",
+                                                 "Moved %'d files",
+                                                 source_info->num_files);
                         status = ngettext ("Moved %'d file to “%s”",
                                            "Moved %'d files to “%s”",
                                            source_info->num_files);
                     }
                     else
                     {
+                        short_status = ngettext ("Copied %'d file",
+                                                 "Copied %'d files",
+                                                 source_info->num_files);
                         status = ngettext ("Copied %'d file to “%s”",
                                            "Copied %'d files to “%s”",
                                            source_info->num_files);
@@ -3613,9 +3640,11 @@ report_copy_progress (CopyMoveJob  *copy_job,
                     tmp = g_strdup_printf (status,
                                            source_info->num_files,
                                            basename);
+                    tmp_short = g_strdup_printf (short_status,
+                                                 source_info->num_files);
 
                     nautilus_progress_info_take_status (job->progress,
-                                                        tmp);
+                                                        tmp, tmp_short);
                 }
             }
             else
@@ -3627,23 +3656,33 @@ report_copy_progress (CopyMoveJob  *copy_job,
                 basename = get_basename (parent);
                 if (files_left > 0)
                 {
+                    short_status = ngettext ("Duplicating %'d file",
+                                             "Duplicating %'d files",
+                                             source_info->num_files);
                     status = ngettext ("Duplicating %'d file in “%s”",
                                        "Duplicating %'d files in “%s”",
                                        source_info->num_files);
                     nautilus_progress_info_take_status (job->progress,
                                                         g_strdup_printf (status,
                                                                          source_info->num_files,
-                                                                         basename));
+                                                                         basename),
+                                                        g_strdup_printf (short_status,
+                                                                         source_info->num_files));
                 }
                 else
                 {
+                    short_status = ngettext ("Duplicated %'d file",
+                                             "Duplicated %'d files",
+                                             source_info->num_files);
                     status = ngettext ("Duplicated %'d file in “%s”",
                                        "Duplicated %'d files in “%s”",
                                        source_info->num_files);
                     nautilus_progress_info_take_status (job->progress,
                                                         g_strdup_printf (status,
                                                                          source_info->num_files,
-                                                                         basename));
+                                                                         basename),
+                                                        g_strdup_printf (short_status,
+                                                                         source_info->num_files));
                 }
                 g_object_unref (parent);
             }
@@ -5654,7 +5693,8 @@ report_preparing_move_progress (CopyMoveJob *move_job,
 
     nautilus_progress_info_take_status (job->progress,
                                         g_strdup_printf (_("Preparing to move to “%s”"),
-                                                         basename));
+                                                         basename),
+                                        g_strdup (_("Preparing to move")));
 
     nautilus_progress_info_take_details (job->progress,
                                          g_strdup_printf (ngettext ("Preparing to move %'d file",
@@ -6332,7 +6372,8 @@ report_preparing_link_progress (CopyMoveJob *link_job,
     basename = get_basename (link_job->destination);
     nautilus_progress_info_take_status (job->progress,
                                         g_strdup_printf (_("Creating links in “%s”"),
-                                                         basename));
+                                                         basename),
+                                        g_strdup (_("Creating links")));
 
     nautilus_progress_info_take_details (job->progress,
                                          g_strdup_printf (ngettext ("Making link to %'d file",
@@ -6830,7 +6871,7 @@ set_permissions_thread_func (GTask        *task,
     common = (CommonJob *) job;
 
     nautilus_progress_info_set_status (common->progress,
-                                       _("Setting permissions"));
+                                       _("Setting permissions"), NULL);
 
     nautilus_progress_info_start (job->common.progress);
     set_permissions_contained_files (job, job->file);
@@ -7475,7 +7516,7 @@ save_image_thread_func (GTask        *task,
     }
 
     nautilus_progress_info_set_progress (job->common.progress, .35, 1);
-    nautilus_progress_info_set_status (job->common.progress, _("Saving image to file"));
+    nautilus_progress_info_set_status (job->common.progress, _("Saving image"), NULL);
     bytes = gdk_texture_save_to_png_bytes (job->texture);
     nautilus_progress_info_set_progress (job->common.progress, .65, 1);
     nautilus_progress_info_set_details (job->common.progress, "");
@@ -7490,7 +7531,7 @@ save_image_thread_func (GTask        *task,
     {
         job->success = TRUE;
         nautilus_progress_info_set_progress (job->common.progress, 1, 1);
-        nautilus_progress_info_set_status (job->common.progress, _("Successfully saved image to file"));
+        nautilus_progress_info_set_status (job->common.progress, _("Saved image"), NULL);
     }
 }
 
@@ -7520,7 +7561,7 @@ save_image_task_done (GObject      *source_object,
         {
             g_file_delete (job->location, NULL, NULL);
         }
-        nautilus_progress_info_set_status (job->common.progress, _("Failed to save image"));
+        nautilus_progress_info_set_status (job->common.progress, _("Failed to save image"), NULL);
     }
 
     g_free (job->base_name);
@@ -7589,7 +7630,7 @@ nautilus_file_operations_paste_image_from_clipboard (GtkWidget                  
     job->done_callback_data = done_callback_data;
 
     nautilus_progress_info_start (job->common.progress);
-    nautilus_progress_info_set_status (job->common.progress, _("Retrieving clipboard data"));
+    nautilus_progress_info_set_status (job->common.progress, _("Retrieving clipboard data"), NULL);
     gdk_clipboard_read_texture_async (clipboard, job->common.cancellable, clipboard_image_received_callback, job);
 }
 
@@ -7621,7 +7662,7 @@ nautilus_file_operations_save_image_from_texture (GtkWidget                     
     job->done_callback_data = done_callback_data;
 
     nautilus_progress_info_start (job->common.progress);
-    nautilus_progress_info_set_status (job->common.progress, _("Retrieving image data"));
+    nautilus_progress_info_set_status (job->common.progress, _("Retrieving image data"), NULL);
 
     task = g_task_new (NULL, NULL, save_image_task_done, job);
     g_task_set_task_data (task, job, NULL);
@@ -7937,7 +7978,8 @@ extract_job_on_progress (AutoarExtractor *extractor,
     basename = get_basename (source_file);
     nautilus_progress_info_take_status (common->progress,
                                         g_strdup_printf (_("Extracting “%s”"),
-                                                         basename));
+                                                         basename),
+                                        NULL);
 
     archive_total_decompressed_size = autoar_extractor_get_total_size (extractor);
 
@@ -8063,7 +8105,8 @@ extract_job_on_error (AutoarExtractor *extractor,
     basename = get_basename (source_file);
     nautilus_progress_info_take_status (extract_job->common.progress,
                                         g_strdup_printf (_("Error extracting “%s”"),
-                                                         basename));
+                                                         basename),
+                                        NULL);
 
     remaining_files = g_list_length (g_list_find_custom (extract_job->source_files,
                                                          source_file,
@@ -8153,7 +8196,8 @@ extract_job_on_scanned (AutoarExtractor *extractor,
 
         nautilus_progress_info_take_status (extract_job->common.progress,
                                             g_strdup_printf (_("Error extracting “%s”"),
-                                                             basename));
+                                                             basename),
+                                            NULL);
         run_error (&extract_job->common,
                    g_strdup_printf (_("Not enough free space to extract “%s”"), basename),
                    NULL,
@@ -8169,6 +8213,7 @@ extract_job_on_scanned (AutoarExtractor *extractor,
 static void
 report_extract_final_progress (ExtractJob *extract_job)
 {
+    char *short_status;
     char *status;
     g_autofree gchar *basename_dest = NULL;
     g_autofree gchar *formatted_size = NULL;
@@ -8188,12 +8233,18 @@ report_extract_final_progress (ExtractJob *extract_job)
 
         source_file = G_FILE (extract_job->source_files->data);
         basename = get_basename (source_file);
+        short_status = g_strdup_printf (_("Extracted “%s”"),
+                                        basename);
         status = g_strdup_printf (_("Extracted “%s” to “%s”"),
                                   basename,
                                   basename_dest);
     }
     else
     {
+        short_status = g_strdup_printf (ngettext ("Extracted %'d file",
+                                                  "Extracted %'d files",
+                                                  extract_job->total_files),
+                                        extract_job->total_files);
         status = g_strdup_printf (ngettext ("Extracted %'d file to “%s”",
                                             "Extracted %'d files to “%s”",
                                             extract_job->total_files),
@@ -8202,7 +8253,7 @@ report_extract_final_progress (ExtractJob *extract_job)
     }
 
     nautilus_progress_info_take_status (extract_job->common.progress,
-                                        status);
+                                        status, short_status);
     formatted_size = g_format_size (extract_job->total_compressed_size);
     nautilus_progress_info_take_details (extract_job->common.progress,
                                          g_strdup_printf (_("%s / %s"),
@@ -8401,6 +8452,7 @@ compress_job_on_progress (AutoarCompressor *compressor,
 {
     CompressJob *compress_job = user_data;
     CommonJob *common = user_data;
+    char *short_status;
     char *status;
     char *details;
     int files_left;
@@ -8416,19 +8468,25 @@ compress_job_on_progress (AutoarCompressor *compressor,
         g_autofree gchar *basename_data = NULL;
 
         basename_data = get_basename (G_FILE (compress_job->source_files->data));
+        short_status = g_strdup_printf (_("Compressing “%s”"),
+                                        basename_data);
         status = g_strdup_printf (_("Compressing “%s” into “%s”"),
                                   basename_data,
                                   basename_output_file);
     }
     else
     {
+        short_status = g_strdup_printf (ngettext ("Compressing %'d file",
+                                                  "Compressing %'d files",
+                                                  compress_job->total_files),
+                                        compress_job->total_files);
         status = g_strdup_printf (ngettext ("Compressing %'d file into “%s”",
                                             "Compressing %'d files into “%s”",
                                             compress_job->total_files),
                                   compress_job->total_files,
                                   basename_output_file);
     }
-    nautilus_progress_info_take_status (common->progress, status);
+    nautilus_progress_info_take_status (common->progress, status, short_status);
 
     elapsed = g_timer_elapsed (common->time, NULL);
 
@@ -8561,6 +8619,7 @@ compress_job_on_error (AutoarCompressor *compressor,
                        gpointer          user_data)
 {
     CompressJob *compress_job = user_data;
+    char *short_status;
     char *status;
     g_autofree gchar *basename_output_file = NULL;
 
@@ -8570,12 +8629,18 @@ compress_job_on_error (AutoarCompressor *compressor,
         g_autofree gchar *basename_data = NULL;
 
         basename_data = get_basename (G_FILE (compress_job->source_files->data));
+        short_status = g_strdup_printf (_("Error compressing “%s”"),
+                                        basename_data);
         status = g_strdup_printf (_("Error compressing “%s” into “%s”"),
                                   basename_data,
                                   basename_output_file);
     }
     else
     {
+        short_status = g_strdup_printf (ngettext ("Error compressing %'d file",
+                                                  "Error compressing %'d files",
+                                                  compress_job->total_files),
+                                        compress_job->total_files);
         status = g_strdup_printf (ngettext ("Error compressing %'d file into “%s”",
                                             "Error compressing %'d files into “%s”",
                                             compress_job->total_files),
@@ -8583,7 +8648,7 @@ compress_job_on_error (AutoarCompressor *compressor,
                                   basename_output_file);
     }
     nautilus_progress_info_take_status (compress_job->common.progress,
-                                        status);
+                                        status, short_status);
 
     run_error ((CommonJob *) compress_job,
                g_strdup (_("There was an error while compressing files.")),
@@ -8602,6 +8667,7 @@ compress_job_on_completed (AutoarCompressor *compressor,
 {
     CompressJob *compress_job = user_data;
     g_autoptr (GFile) destination_directory = NULL;
+    char *short_status;
     char *status;
     g_autofree gchar *basename_output_file = NULL;
 
@@ -8611,12 +8677,18 @@ compress_job_on_completed (AutoarCompressor *compressor,
         g_autofree gchar *basename_data = NULL;
 
         basename_data = get_basename (G_FILE (compress_job->source_files->data));
+        short_status = g_strdup_printf (_("Compressed “%s”"),
+                                        basename_data);
         status = g_strdup_printf (_("Compressed “%s” into “%s”"),
                                   basename_data,
                                   basename_output_file);
     }
     else
     {
+        short_status = g_strdup_printf (ngettext ("Compressed %'d file",
+                                                  "Compressed %'d files",
+                                                  compress_job->total_files),
+                                        compress_job->total_files);
         status = g_strdup_printf (ngettext ("Compressed %'d file into “%s”",
                                             "Compressed %'d files into “%s”",
                                             compress_job->total_files),
@@ -8625,7 +8697,7 @@ compress_job_on_completed (AutoarCompressor *compressor,
     }
 
     nautilus_progress_info_take_status (compress_job->common.progress,
-                                        status);
+                                        status, short_status);
 
     nautilus_file_changes_queue_file_added (compress_job->output_file);
 
