src/nautilus-progress-info.h
@@ -42,6 +42,7 @@ NautilusProgressInfo *nautilus_progress_info_new (void);
 
 GList *       nautilus_get_all_progress_info (void);
 
+char *        nautilus_progress_info_get_short_status (NautilusProgressInfo *info);
 char *        nautilus_progress_info_get_status      (NautilusProgressInfo *info);
 char *        nautilus_progress_info_get_details     (NautilusProgressInfo *info);
 double        nautilus_progress_info_get_progress    (NautilusProgressInfo *info);
@@ -57,9 +58,11 @@ void          nautilus_progress_info_finish          (NautilusProgressInfo *info
 void          nautilus_progress_info_pause           (NautilusProgressInfo *info);
 void          nautilus_progress_info_resume          (NautilusProgressInfo *info);
 void          nautilus_progress_info_set_status      (NautilusProgressInfo *info,
-						      const char           *status);
+						      const char           *status,
+                                                      const char           *short_status);
 void          nautilus_progress_info_take_status     (NautilusProgressInfo *info,
-						      char                 *status);
+                                                      char                 *status,
+						      char                 *short_status);
 void          nautilus_progress_info_set_details     (NautilusProgressInfo *info,
 						      const char           *details);
 void          nautilus_progress_info_take_details    (NautilusProgressInfo *info,
